chong/GPUfuncs/KDTree/my_kdtree/githubGPU/log.txt
Gpu.cu:37:1: warning: '/*' within block comment [-Wcomment]
/* DBUG defines
^
Gpu.cu:38:1: warning: '/*' within block comment [-Wcomment]
/********************************************************************************/
^
In file included from Gpu.cu:49:
In file included from ./Gpu.h:43:
In file included from ./buildKdTree_common.h:47:
./KdNode.h:141:2: error: no template named 'list'; did you mean 'std::list'?
        list<KdNode> searchKdTree(const KdNode kdNodes[], const KdCoord coordinates[], const KdCoord* query, const sint cut,
        ^~~~
        std::list
/usr/lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_list.h:552:11: note: 'std::list' declared here
    class list : protected _List_base<_Tp, _Alloc>
          ^
In file included from Gpu.cu:50:
./mergeSort_common.h:40:13: warning: 'SHARED_SIZE_LIMIT' macro redefined [-Wmacro-redefined]
#define     SHARED_SIZE_LIMIT 1024U
            ^
./buildKdTree_common.h:54:9: note: previous definition is here
#define SHARED_SIZE_LIMIT (1024U)
        ^
In file included from Gpu.cu:50:
./mergeSort_common.h:41:17: warning: 'SAMPLE_STRIDE' macro redefined [-Wmacro-redefined]
#define         SAMPLE_STRIDE 128
                ^
./buildKdTree_common.h:55:13: note: previous definition is here
#define     SAMPLE_STRIDE (128)
            ^
Gpu.cu:1076:29: error: use of undeclared identifier 'hipDeviceProp'; did you mean 'hipDeviceGet'?
inline bool IsGPUCapableP2P(hipDeviceProp *pProp)
                            ^~~~~~~~~~~~~
                            hipDeviceGet
/opt/rocm/hip/include/hip/hip_runtime_api.h:880:12: note: 'hipDeviceGet' declared here
hipError_t hipDeviceGet(hipDevice_t* device, int ordinal);
           ^
Gpu.cu:1076:1: warning: inline variables are a C++17 extension [-Wc++17-extensions]
inline bool IsGPUCapableP2P(hipDeviceProp *pProp)
^
Gpu.cu:1076:44: error: use of undeclared identifier 'pProp'
inline bool IsGPUCapableP2P(hipDeviceProp *pProp)
                                           ^
Gpu.cu:1076:50: error: expected ';' after top level declarator
inline bool IsGPUCapableP2P(hipDeviceProp *pProp)
                                                 ^
                                                 ;
5 warnings and 4 errors generated when compiling for gfx902.
make: *** [Makefile:82: obj/Gpu.o] Error 1
